Replace RemoveInput usages with a custom WindowAccumulator
(cherry picked from commit 6d0f36b5dfcfac36a66b85cf8f25dbaaa46cf712)
(cherry picked from commit 2ee1a5d8587b92185ec1d502aa6082d6aa3ddaf5)